<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.update4j</groupId>
	<artifactId>update4j</artifactId>
	<version>1.4.4(J1.8-downgraded)</version>
	<name>update4j</name>
	<description>Updates and launches Java 8+ Applications</description>
	<url>https://github.com/update4j/update4j</url>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mordechai Meisels</name>
			<email>mordechai112@gmail.com</email>
			<organization>update4j</organization>
			<organizationUrl>http://update4j.org/</organizationUrl>
		</developer>
	</developers>

	<scm>
		<url>https://github.com/update4j/update4j/tree/master</url>
		<connection>scm:git:https://github.com/update4j/update4j.git</connection>
		<developerConnection>scm:git:https://github.com:update4j/update4j.git</developerConnection>
	</scm>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
	</properties>

	<build>
            <pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<!-- <release>9</release> -->
                                        <source>1.8</source>
                                        <target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<plugin>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>1.8</version>
				<executions>
					<execution>
						<phase>package</phase>
						<configuration>
							<target>
								<exec executable="${java.home}/bin/jar" failonerror="true">
									<arg value="--main-class" />
									<arg value="org.update4j.Bootstrap" />
									<arg value="--module-version" />
									<arg value="${project.version}" />
									<arg value="--update" />
									<arg value="--file" />
									<arg value="${project.build.directory}/${project.artifactId}-${project.version}.jar" />
								</exec>
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<noqualifier>all</noqualifier>
					<failOnError>false</failOnError>
					<additionalOptions>-html5</additionalOptions>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<phase>compile</phase>
						<goals>
							<goal>aggregate</goal>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
            </pluginManagement>
	</build>
</project>